[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wzlcli"
version = "0.1.0"
description = "Legend resource command-line toolkit"
requires-python = ">=3.11"

[project.scripts]
wzlcli = "wzlcli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
